assets/css/screen-detail.scss
.screen-detail__inline-layout {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 4px;
}

.screen-detail__container {
  background-color: $cool-gray-40;
  border-radius: 8px;
  padding: 16px;

  &--inline {
    flex-grow: 1;

    &:not(:last-child) {
      margin-right: 4px;
    }
  }

  &--paess {
    padding-top: 0px;
  }

  &--paess-g {
    background: linear-gradient(
      to bottom,
      $mbta-green 40px,
      $cool-gray-40 40px
    );
  }

  &--paess-r {
    background: linear-gradient(to bottom, $mbta-red 40px, $cool-gray-40 40px);
  }

  &--paess-m {
    background: linear-gradient(to bottom, $mbta-red 40px, $cool-gray-40 40px);
  }

  &--paess-b {
    background: linear-gradient(to bottom, $mbta-blue 40px, $cool-gray-40 40px);
  }

  &--paess-o {
    background: linear-gradient(
      to bottom,
      $mbta-orange 40px,
      $cool-gray-40 40px
    );
  }

  &--paess-s {
    background: linear-gradient(to bottom, $mbta-bus 40px, $cool-gray-40 40px);
  }
}

.screen-detail__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.screen-detail__screen-type-location {
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  color: white;

  &--paess {
    margin: 8px 0px;
  }

  &--paess-s {
    color: black;
  }
}

.screen-detail__dup-ad-text {
  font-size: 14px;
  font-weight: normal;
  line-height: 17px;
  color: rgba(255, 255, 255, 0.6);
  text-align: right;
  flex-grow: 2;
  margin-top: 12px;
  margin-right: 16px;
}

